Fixed navbar and donation descr text and slider text alignment

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4165,7 +4165,7 @@ tbody.collapse.show {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1217px) {
   .navbar-expand-lg {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
